--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,1 +1,11 @@
-hello
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title>Restaurant Management System</title>
+</head>
+<body>
+<div id="app"></div>
+<script src="/js/app.js"></script>
+</body>
+</html>
