--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -1,5 +1,5 @@
 * {
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0; }
 
@@ -20,3 +20,27 @@
       background: #eee;
       font-size: 27px;
       text-decoration: underline; }
+
+.scope-switcher {
+  color: white;
+  display: inline-block;
+  line-height: 36px;
+  margin-left: 10px; }
+
+.header {
+  background: #00A1E0;
+  overflow: auto;
+  padding: 10px; }
+  .header .title {
+    color: white;
+    float: left;
+    font-weight: normal; }
+  .header .actions {
+    float: right; }
+    .header .actions .label {
+      color: white; }
+    .header .actions select {
+      height: 36px; }
+
+.content {
+  padding: 10px; }
